<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Dashchan Monet</string>

    <!-- Light Theme Card -->
    <string name="light_theme">Light Theme</string>
    <string name="light_theme_description">Generate Light Theme for Dashchan from system colors.</string>

    <!-- Dark Theme Card -->
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_description">Generate Dark Theme for Dashchan from system colors.</string>
    <string name="export_text">Export</string>

    <!-- Settings card -->
    <string name="settings_card_title">Settings</string>
    <string name="settings_card_switch_black">Pure black theme</string>
    <string name="settings_card_switch_black_summary">Replace background color with black</string>

    <!-- About Card -->
    <string name="about_card_title" translatable="false">Dashchan Monet Theme</string>
    <string name="version">Version %s</string>
    <string name="about_card_description">Monet theme generator for Dashchan\nCreated by %s</string>
    <string name="developer_nick" translatable="false">HotarunIchijou</string>
    <string name="source_code">Source code</string>

    <!-- Snackbar Message -->
    <string name="snackbar_message">Theme saved in %s</string>


</resources>